--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -14,17 +14,7 @@
   <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :workflow_state, style: "display: block" %>
-    <%= form.text_field :workflow_state %>
-  </div>
-
-  <div>
-    <%= form.label :code, style: "display: block" %>
-    <%= form.text_field :code %>
-  </div>
+  </div>  
 
   <div>
     <%= form.label :date, style: "display: block" %>
@@ -38,7 +28,12 @@
 
   <div>
     <%= form.label :document_type_id, style: "display: block" %>
-    <%= form.text_field :document_type_id %>
+    <%= form.select :document_type_id, DocumentType.all.map {|p| [p.name, p.id ]} %>
+  </div>
+
+  <div>
+    <%= form.label :procedure_id, style: "display: block" %>
+    <%= form.select :procedure_id, Procedure.all.map {|p| [p.name, p.id ]} %>
   </div>
 
   <div>
